# rust-fil-sector-builder

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain  sector_builder_ffi.pc.template
.circleci/: config.yml
fil-proofs-tooling/: Cargo.toml
scripts/: build-release.sh  package-release.sh
sector-builder/: Cargo.toml  sector-build-src.tar
sector-builder-ffi/: Cargo.toml  build.rs  cbindgen.toml
sector-builder-ffi/examples/: simple.rs
sector-builder-ffi/examples/simple/: deallocator.rs  helpers.rs  main.rs  plumbing.rs  porcelain.rs  provingset.rs
sector-builder-ffi/src/: api.rs  lib.rs  reexported.rs  responses.rs  types.rs
sector-builder/src/: builder.rs  disk_backed_storage.rs  error.rs  lib.rs  metadata.rs  metadata_manager.rs  scheduler.rs  sealer.rs  state.rs  store.rs  traits.rs  worker.rs
sector-builder/src/helpers/: add_piece.rs  blake2b_checksum.rs  compute_checksum.rs  get_seal_status.rs  get_sealed_sector_health.rs  get_sectors_ready_for_sealing.rs  mod.rs  retrieve_piece.rs  seal.rs  snapshots.rs
sector-builder/src/kv_store/: fs.rs  mod.rs
