[workspace]

members = [
  "sector-builder",
  "ffi-toolkit",
  "fil-proofs-tooling",
  "drop-struct-macro-derive",
  "sector-builder-ffi"
]

[patch.crates-io]
filecoin-proofs = { rev = "07de4ef9eac5400335229678c0cc01ab8d967273", git = "https://github.com/filecoin-project/rust-fil-proofs.git" }
filecoin-proofs-ffi = { rev = "f8a2be56093e9fb73b0fb6336224308985c3f1a1", git = "https://github.com/filecoin-project/rust-fil-proofs-ffi.git" }
