[package]
name = "sector-builder-ffi"
description = "FFI Interface for sector-builder"
version = "0.5.2"
authors = ["laser <l@s3r.com>", "dignfiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"
edition = "2018"
publish = false

[lib]
# cdylib is required by the FFI example/test
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
drop_struct_macro_derive = "0.3.0"
ffi-toolkit = "0.3.0"
filecoin-proofs = { path = "/Users/erinswenson-healey/dev/rust-proofs/filecoin-proofs" }
storage-proofs = { path = "/Users/erinswenson-healey/dev/rust-proofs/storage-proofs" }
filecoin-proofs-ffi = { path = "/Users/erinswenson-healey/dev/rust-fil-proofs-ffi" }
sector-builder = { path = "../sector-builder" }
failure = "0.1.5"
libc = "0.2.58"
pretty_env_logger = "0.3.0"
log = "0.4.7"
once_cell = "0.2.4"

[dev-dependencies]
scopeguard = "1.0"
byteorder = "1.3.1"
tempfile = "3.0.8"
rand = "0.6.5"

[build-dependencies]
bindgen = "0.49"
cbindgen = "0.9"
