[package]
name = "sector-builder-ffi"
description = "FFI Interface for sector-builder"
version = "0.5.2"
authors = ["laser <l@s3r.com>", "dignfiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"
edition = "2018"
publish = false

[lib]
# cdylib is required by the FFI example/test
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
drop_struct_macro_derive = "0.4.0"
ffi-toolkit = "0.4.0"
# FIXME: This should be master branch or a version
filecoin-proofs = { git = "https://github.com/filecoin-project/rust-fil-proofs.git", rev = "b7e29a5e739df3235823e16cd8e4ee1a1089d14a" }
# FIXME: This should be master branch or a version
storage-proofs = { git = "https://github.com/filecoin-project/rust-fil-proofs.git", rev = "b7e29a5e739df3235823e16cd8e4ee1a1089d14a" }
# FIXME: This should be master branch or a version
filecoin-proofs-ffi = { git = "https://github.com/filecoin-project/rust-fil-proofs-ffi.git", rev = "ecd34bf22b825b5875a07eadd67cc2ac77165d30" }
sector-builder = { path = "../sector-builder" }
failure = "0.1.5"
libc = "0.2.58"
pretty_env_logger = "0.3.0"
log = "0.4.7"
once_cell = "0.2.4"
nodrop = "0.1.13"
paired = "0.16.0"

[dev-dependencies]
scopeguard = "1.0"
byteorder = "1.3.1"
tempfile = "3.0.8"
rand = "0.6.5"
nix = "0.9.0"
pipe-channel = "1.2.2"

[build-dependencies]
bindgen = "0.51.1"
cbindgen = "0.9.1"
